Attempt at switching the iframe so it fits within the screen instead of spilling out, to potentially solve a number of problems:
Good:
* fixes 'iframe too tiny' on Android 3 and 4 (but... see below)
* sorta fixes 'section links scroll too far down' on Android 2.3 (but... see below)

Bad:
* it looks and scrolls right on Android 3/4, but after doing some scrolling, tapping doesn't activate links properly -- works as if the tap is on the unscrolled iframe
* doesn't actually seem to size correctly on 2.3; on my Nexus 1 the whole page including the header bar scrolls; the iframe seems to just spill out instead of fitting our requested size
* section links just don't seem to work on Android 3/4

--- a/assets/www/app.css
+++ b/assets/www/app.css
@@ -25,11 +25,11 @@ div
 	  		
 header 
 {
-	position:fixed;
+	position:absolute;
 	top:0px;
 	left:0px;
 	width:100%;
-	/*height:100px;*/
+	height:52px;
 	z-index:1;
 }   
 
@@ -59,12 +59,16 @@ header
 #content
 {
 	display:block;
-	position:relative;
+	position:absolute;
 	top:52px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	border: 2px red;
 }
 
 iframe#main {
-	width:100%;
+	position:absolute;
 }
 
 .listItemContainer
